--- a/mod_main/src/main/res/layout/fragment_home.xml
+++ b/mod_main/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
             <com.google.android.material.appbar.AppBarLayout
                     android:id="@+id/appbar_layout"
                     android:orientation="vertical"
-                    android:background="@color/transparent"
+                    android:background="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
